--- a/SongScheduler/nbproject/project.properties
+++ b/SongScheduler/nbproject/project.properties
@@ -25,7 +25,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
