* Add JDBCDriver for sqlite to JavaBeans (sqlitejdbc.jar).
* Change the absolute directory of database to relative.

* Add @Ignore tag to InitialDBTest.java

-Feng

git-svn-id: http://svn2.xp-dev.com/svn/highfive-Team5@35 aa33edd8-d469-0410-94bb-77eb1adef642

--- a/SongScheduler/nbproject/project.properties
+++ b/SongScheduler/nbproject/project.properties
@@ -21,12 +21,14 @@ dist.jar=${dist.dir}/SongScheduler.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.DateChooser.jar=JavaBeans/DateChooser/DateChooser.jar
+file.reference.sqlitejdbc.jar=JavaBeans/JDBCDriver/sqlitejdbc.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.DateChooser.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.sqlitejdbc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -35,7 +37,6 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
 javadoc.additionalparam=
 javadoc.author=false
