updates project properties
git-svn-id: http://svn2.xp-dev.com/svn/highfive-Team5@118 aa33edd8-d469-0410-94bb-77eb1adef642

--- a/SongScheduler/nbproject/project.properties
+++ b/SongScheduler/nbproject/project.properties
@@ -1,5 +1,6 @@
 application.title=SongScheduler
-application.vendor=kurtisschmidt
+application.vendor=Team HighFive
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
