Add the Authentication class to the model diagram. Also add the connection between the UML and the project, but I have no idea whether it will work after commit.
-Feng

git-svn-id: http://svn2.xp-dev.com/svn/highfive-Team5@165 aa33edd8-d469-0410-94bb-77eb1adef642

--- a/SongSchedUML/nbproject/project.properties
+++ b/SongSchedUML/nbproject/project.properties
@@ -1,6 +1,7 @@
 code.gen.templates=Java:Basic Class|Java:Basic Interface|Java:Basic Enumeration
-project.SongScheduler=../../CS/3350/Project/SongScheduler
+project.SongScheduler=../SongScheduler
 reference.SongScheduler.jar=${project.SongScheduler}/dist/SongScheduler.jar
+uml.imports=
 uml.javaproject=${project.SongScheduler}
 uml.javaproject.artifacts=\
     ${reference.SongScheduler.jar}
