--- a/SongSchedUML/nbproject/private/private.properties
+++ b/SongSchedUML/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 project.dir=/Users/cmhilde/CS/3350/Project/SongScheduler
 project.SongScheduler=/Users/liufeng/prog/NetBeansProjects/SongScheduler
-user.properties.file=/Users/cmhilde/.netbeans/6.5/build.properties
+user.properties.file=/Users/liufeng/.netbeans/6.7/build.properties
